fix portrait on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -208,23 +208,14 @@ body.show-detail-4 .detail-3-only {
   h1 {
     margin-top: 28px;
     font-size: 19px;
-    line-height: 1.1;
   }
 
   .portrait img {
     float: left;
-    margin: 30px 10px 0;
-    max-width: 25%;
+    margin: 30px 10px 0 0;
+    max-height: 60px;
   }
 
-  /* Only show highest quality image on mobile: interaction is confusing on mobile */
-  .portrait img {
-    display: none !important;
-  }
-
-  .portrait img.detail-4-only {
-    display: inline !important;
-  }
 }
 
 a.powerline {
